2010-05-06  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/genTest.cpp: Fix neighbor access

	* src/QueryPlan.cpp: used getHostName1 and getPort1 as we are still in generation mode

	* include/Context.h: Add setNeighbors method

2010-05-06  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/OptDMCS.cpp: Clean up.
	* src/PrimitiveDMCS.cpp: Likewise.

2010-05-06  Minh Tran Dao  <dao@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Initialize OptDMCS with global_sigs.

	* src/OptDMCS.cpp: Use ProxySignatureByLocal.

	* include/OptDMCS.h: Now inherits global sigs from BaseDMCS.
	* include/PrimitiveDMCS.h: Likewise.

	* include/BaseDMCS.h: Move global_sigs up here.
	* src/BaseDMCS.cpp: Likewise.

2010-05-06  Minh Tran Dao  <dao@.kr.tuwien.ac.at>

	* include/ProxySignatureByLocal.h: Use ProxySignatureByLocal in PrimitiveDMCS.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/BaseDMCS.cpp: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.
	* include/ClaspResultBuilder.h: Likewise.
	* include/BaseDMCS.h: Likewise.

2010-05-06  Minh Tran Dao  <dao@kr.tuwien.ac.at>

	* include/Neighbor.h: Use Neighbor instead of QueryPlan to
	get hostname and port
	* src/genTest.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/QueryPlan.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/ContextGenerator.cpp: Likewise.
	* src/BaseDMCS.cpp: Likewise.
	* include/QueryPlan.h: Likewise.
	* include/OptDMCS.h: Likewise.
	* include/Context.h: Likewise.
	* include/BridgeRulesBuilder.tcc: Likewise.
	* include/BridgeRulesBuilder.h: Likewise.
	* include/BaseDMCS.h (dmcs): Likewise.

	* src/OptDMCS.cpp: Use the right V at the right place.

2010-05-06  Dao Tran Minh  <dao@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Get neighbor_list from bridge rules parsing.

	* src/PrimitiveDMCS.cpp: Use neighbors from context.
	* src/OptDMCS.cpp: Likewise.

	* src/ContextGenerator.cpp: Adapt to neighbor_list.
	* src/genTest.cpp: Likewise.
