@@ -1,3 +1,13 @@
+2010-05-06  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>
+
+	* src/OptDMCS.cpp (dmcs): Fix: incoming V for guessing, outgoing V
+	for combining.
+	* include/OptDMCS.h (dmcs): Likewise.
+
+	* include/PrimitiveMessage.h (dmcs): Use history as a list.
+	* src/PrimitiveDMCS.cpp (dmcs): Likewise.
+
+
 2010-05-06  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>
 
 	* src/genTest.cpp: Fix neighbor access
